--- a/main.html
+++ b/main.html
@@ -4,89 +4,142 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Roboto:wght@100;400;500;700;900&family=Ubuntu:ital,wght@0,300;0,400;0,500;1,700&display=swap"
-      rel="stylesheet"
-    />
+    <title>Home</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Roboto:wght@100;400;500;700;900&family=Ubuntu:ital,wght@0,300;0,400;0,500;1,700&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" href="styles.css" />
-    <title>Main</title>
+    <link rel="stylesheet" href="main_navbarHeader.css" />
+    <link rel="stylesheet" href="main_mainBody.css" />
+    <link rel="stylesheet" href="main_navbarFooter.css" />
+
   </head>
   <body>
     <header>
-      <nav class="fixed-top">
-        <div class="Logo">
-          <a href="main.html">
-            <img
-              src="Images/valorant-logo.svg"
-              alt=""
+      <nav id="navbar" class="navbar fixed-top  navbar-expand-lg">
+        <div class="container-fluid">
+
+          <!-- LOGO -->
+
+          <a class="navbar-brand" href="#"
+            ><img
+              src="Images\valorant-logo.svg
+            "
+              alt="Valorant Logo"
+              srcset=""
+              width="75"
+              height="75"
             />
           </a>
-        </div>
-        <ul class="nav_links">
-          <li>
-            <a href="main.html">Home</a>
-          </li>
-          <li>
-            <a href="main.html">Agents</a>
-          </li>
-          <li>
-            <a href="main.html">Maps</a>
-          </li>
-          <li class="nav_li_down">
-            <a href="https://playvalorant.com/">Download</a>
-          </li>
-        </ul>
-        <div class="Download">
-          <a href="https://playvalorant.com/">Download</a>
-        </div>
-        <div class="coll">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
+
+          <!-- Toggle Button -->
+
+          <button
+            class="navbar-toggler toggle_icon"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              fill="currentColor"
+              class="bi bi-list place"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
+              />
+            </svg>
+          </button>
+
+          <!-- UL ELMENTS -->
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav navbar_ul">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Agents</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Maps</a>
+              </li>
+            </ul>
+
+            <!-- DOWNLOAD LINK -->
+
+            <a class="nav-link nav-Download" href="#">Download</a>
+          </div>
         </div>
       </nav>
     </header>
-
+    <!-- HEADER END -->
+    <!-- MAIN START -->
     <main>
-      <section class="Video">
-        <video autoplay loop muted preload="auto"  src="retake.mp4"></video>
+
+      <section class="video">
+        <video src="retake.mp4" autoplay loop muted class="video-bg"></video>
       </section>
-      <section class="s1">
-        <h1 class="display-1">Valorant</h1>
-        <p class="s1P lead">
+
+      <section class="s1 col">
+        <h1 class="display-1 row">Valorant</h1>
+        <p class="s1P lead row">
+          <div class="s1P-first lead">
           Valorant is a team-based first-person hero shooter set in the near
           Blend your style and experience on a global, competitive stage.
-          <br />
-
+          </div>
           You have 13 rounds to attack and defend your side using sharp gunplay
           and tactical abilities. And, with one life per-round, you'll need to
-          think faster than your opponent if you want to survive
+          think faster than your opponent if you want to survive.
+          <br />
+
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio eaque culpa eos repellat ducimus rerum obcaecati totam. Eos non eligendi, odit maxime delectus deleniti culpa possimus aliquam error mollitia similique.
+          Eligendi perspiciatis unde perferendis odit ea! Dignissimos assumenda architecto mollitia nihil unde et ducimus quia soluta, corporis quos recusandae, necessitatibus totam praesentium eos nam accusantium velit rem aperiam molestiae repellendus!
+          Vitae repudiandae eos cupiditate assumenda maxime, fugit consequatur at odit incidunt accusamus dolores voluptas. Magni blanditiis, est ratione labore debitis voluptatum ut minima asperiores dolorem molestiae, esse accusantium eligendi rem.
+          Sunt cum, hic quis eaque totam eveniet neque culpa doloribus in consequatur et aut quaerat repellat ad fugit natus ullam illum reprehenderit! Sequi reprehenderit eius magnam similique porro, est voluptate.
         </p>
       </section>
       <hr>
       <section class="s2">
         <div class="HL">
-          <h1 class="display-1">Riot</h1>
-          <a class="Riot_logo" href="https://www.riotgames.com/en">
-            <img src="Images/riot-games-seeklogo.com.svg" alt="" />
+          <h1 class="display-1">Riot
+            <a class="Riot_logo" href="https://www.riotgames.com/en">
+            <img src="Images/riot-games-seeklogo.com.svg" 
+            alt="" 
+            width="75"
+            height="75" />
           </a>
+        </h1>
         </div>
 
         <p class="lead s2p">
+          <div class="s2P-first">
           Riot Games, Inc. is an American video game developer, publisher and
           esports tournament organizer. Its headquarters are in West Los
           Angeles, California.
+            </div>
+
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. At impedit dolorum, vel laborum optio quas quam aliquid voluptates quos nulla vitae expedita laudantium odit eum iure perferendis. Nihil, repellat reiciendis?
+          Incidunt nisi eos, adipisci iusto consectetur omnis tempore nulla magnam quod quae possimus dolore sequi vero. Voluptatum placeat quaerat earum, id incidunt dolorum facere aut labore enim. Nisi, laudantium ex.
+          <br>
+          Alias asperiores at enim eum ipsum corrupti architecto placeat laboriosam sed. Doloribus quasi dolores vitae, iusto minus repellendus fugiat? Perferendis eius ut iure. Sed vitae fuga itaque consectetur, praesentium beatae!
           <br />
-          <div>
+          <div class="s2-ul">
             <h3 class="display-6">
             Riot Also owns games like:
             </h3>
@@ -101,66 +154,84 @@
         </p>
       </section>
     </main>
-<div class="estt">test</div>
-    <footer>
-      <nav class="F_nav">
-        <ul class="con_logo">
-          <li>
-            <a href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+    <!-- MAIN END -->
+
+    <!-- FOOTER START -->
+    <footer class="footer container-fluid bg-dark">
+
+      <nav class="footerNav row">
+        <section class="About-Links col-6">
+      <h3 class="display-6">More Links</h3>
+
+          <ul class="about_ul">
+
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Riot</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </section>
+        <section class="Connect-Links col-6">
+      <h3 class="display-6">Follow Us</h3>
+
+      <ul class="connectLinks">
+        <li>
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-meta" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8.217 5.243C9.145 3.988 10.171 3 11.483 3 13.96 3 16 6.153 16.001 9.907c0 2.29-.986 3.725-2.757 3.725-1.543 0-2.395-.866-3.924-3.424l-.667-1.123-.118-.197a54.944 54.944 0 0 0-.53-.877l-1.178 2.08c-1.673 2.925-2.615 3.541-3.923 3.541C1.086 13.632 0 12.217 0 9.973 0 6.388 1.995 3 4.598 3c.319 0 .625.039.924.122.31.086.611.22.913.407.577.359 1.154.915 1.782 1.714Zm1.516 2.224c-.252-.41-.494-.787-.727-1.133L9 6.326c.845-1.305 1.543-1.954 2.372-1.954 1.723 0 3.102 2.537 3.102 5.653 0 1.188-.39 1.877-1.195 1.877-.773 0-1.142-.51-2.61-2.87l-.937-1.565ZM4.846 4.756c.725.1 1.385.634 2.34 2.001A212.13 212.13 0 0 0 5.551 9.3c-1.357 2.126-1.826 2.603-2.581 2.603-.777 0-1.24-.682-1.24-1.9 0-2.602 1.298-5.264 2.846-5.264.091 0 .181.006.27.018Z"/>
+</svg>
+</a>
+        </li>
+        <li>
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
   <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
 </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-</svg>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-<svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
-  <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
-</svg>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-<svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-twitch" viewBox="0 0 16 16">
+</a>
+        </li>
+        <li>
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitch" viewBox="0 0 16 16">
   <path d="M3.857 0 1 2.857v10.286h3.429V16l2.857-2.857H9.57L14.714 8V0H3.857zm9.714 7.429-2.285 2.285H9l-2 2v-2H4.429V1.143h9.142v6.286z"/>
   <path d="M11.857 3.143h-1.143V6.57h1.143V3.143zm-3.143 0H7.571V6.57h1.143V3.143z"/>
 </svg>
           </a>
-          </li>
-        </ul>
-        <ul class="foot">
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-          <li>
-            <a href="#">Support</a>
-          </li>
-        </ul>
+        </li>
+        <li>
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+  <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+</svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
+  <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+</svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+  <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+</svg>
+          </a>
+        </li>
+      </ul>
+
+        </section>
       </nav>
     </footer>
+    <!-- FOOTER END -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
   </body>
